staging:iio: add support for ADCs and hrtimer triger
Galileo Gen1 - AD7298 ADC
Galileo Gen2 - ADC1x8s102

Signed-off-by: Todor Minchev <todor@minchev.co.uk>

--- a/.config
+++ b/.config
@@ -2934,6 +2934,7 @@ CONFIG_STAGING=y
 # CONFIG_AD7816 is not set
 # CONFIG_AD7192 is not set
 # CONFIG_AD7280 is not set
+CONFIG_ADC1x8S102=m
 
 #
 # Analog digital bi-direction converters
@@ -2997,6 +2998,7 @@ CONFIG_STAGING=y
 # Triggers - standalone
 #
 # CONFIG_IIO_PERIODIC_RTC_TRIGGER is not set
+CONFIG_IIO_HRTIMER_TRIGGER=m
 # CONFIG_IIO_SIMPLE_DUMMY is not set
 # CONFIG_FT1000 is not set
 
